# booking

./: Cargo.toml  docker-compose.yml
api/: .env  Cargo.toml  Dockerfile
api/migrations/2024-04-11-090747_create_user/: up.sql
api/migrations/2024-04-11-090823_create_admin/: up.sql
api/migrations/2024-04-11-090824_create_schedule/: down.sql  up.sql
api/migrations/2024-04-11-090923_create_booking/: down.sql  up.sql
api/migrations/2024-04-11-090935_create_booking_schedule/: down.sql  up.sql
api/src/: main.rs
api/src/db/: mod.rs  schema.rs
api/src/db/models/: admin.rs  booking.rs  booking_schedule.rs  dberror.rs  mod.rs  schedule.rs  user.rs
api/src/routes/: user.rs
web/: Cargo.toml  Dockerfile
web/src/: main.rs
